remove construction warning, add basic description

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <title>rcasto.dev</title>
-    <meta name="description" content="rcasto.dev">
+    <meta name="description" content="A dev who loves the web | rcasto.dev">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -11,8 +11,6 @@
 </head>
 
 <body>
-    <div class="construction-warning">Under construction...</div>
-
     <main>
         <img src="/images/me.jpg" alt="Just a picture of me">
         <social-contact
