--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -31,6 +31,9 @@ main img {
     max-width: 100%;
     transition: linear transform 2s;
     transform: rotate(0deg);
+    -webkit-box-shadow: 0px 0px 12px 6px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 12px 6px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 12px 6px rgba(0,0,0,0.75);
 }
 main img:hover, main img:active {
     transform: rotate(360deg);
