update to title and description

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <title>rcasto.dev</title>
-    <meta name="description" content="A dev who loves the web | rcasto.dev">
+    <title>A dev who loves the web | rcasto.dev</title>
+    <meta name="description" content="A dev who loves the web, welcome to my site! Mainly glue for linking out to my projects and providing a little intro and context about me. Anyway cheers!">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
