--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,8 @@
 
 <head>
     <title>A dev who loves the web | rcasto.dev</title>
-    <meta name="description" content="A dev who loves the web, welcome to my site! Mainly glue for linking out to my projects and providing a little intro and context about me. Anyway cheers!">
+    <meta name="description"
+        content="A dev who loves the web, welcome to my site! Mainly glue for linking out to my projects and providing a little intro and context about me. Anyway cheers!">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -13,14 +14,37 @@
 <body>
     <main>
         <img src="/images/me.jpg" alt="Just a picture of me">
-        <social-contact
-            github="rcasto"
-            linkedin="rcasto">
+        <social-contact github="rcasto" linkedin="rcasto">
         </social-contact>
         <a href="https://cupandpen.com">Cup & Pen - Another little site of mine</a>
     </main>
 
+    <audio src="/audio/dj-scratch-1.mp3"></audio>
+    <audio src="/audio/dj-scratch-2.mp3"></audio>
+    <audio src="/audio/dj-scratch-3.mp3"></audio>
+
     <script async src="https://cdn.jsdelivr.net/npm/social-contact@1.0.8/dist/socialcontact.min.js"></script>
+    <script>
+        const audioElems = document.querySelectorAll('audio');
+        const profileImg = document.querySelector('img');
+
+        let playingAudioElem = null;
+
+        profileImg.addEventListener('mouseenter', () => {
+            const randomAudioIndex = Math.floor(Math.random() * audioElems.length);
+
+            playingAudioElem = audioElems[randomAudioIndex];
+            playingAudioElem.play();
+        });
+
+        profileImg.addEventListener('mouseleave', () => {
+            if (!playingAudioElem) {
+                return;
+            }
+
+            playingAudioElem.pause();
+        });
+    </script>
 </body>
 
 </html>
