open cup and pen website link in new tab

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
         <img src="/images/me.jpg" alt="Just a picture of me">
         <social-contact github="rcasto" linkedin="rcasto">
         </social-contact>
-        <a href="https://cupandpen.com">Cup & Pen - Another little site of mine</a>
+        <a href="https://cupandpen.com" target="_blank">Cup & Pen - Another little site of mine</a>
     </main>
 
     <audio src="/audio/dj-scratch-1.mp3"></audio>
