make inline script load asynchronously

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,8 +14,7 @@
 <body>
     <main>
         <img src="/images/me.jpg" alt="Just a picture of me">
-        <social-contact github="rcasto" linkedin="rcasto">
-        </social-contact>
+        <social-contact github="rcasto" linkedin="rcasto"></social-contact>
         <a href="https://cupandpen.com" target="_blank">Cup & Pen - Another little site of mine</a>
     </main>
 
@@ -23,7 +22,7 @@
     <audio src="/audio/dj-scratch-2.mp3"></audio>
 
     <script async src="https://cdn.jsdelivr.net/npm/social-contact@1.0.8/dist/socialcontact.min.js"></script>
-    <script>
+    <script async>
         const audioElems = document.querySelectorAll('audio');
         const profileImg = document.querySelector('img');
 
