--- a/src/public/styles/style.css
+++ b/src/public/styles/style.css
@@ -29,12 +29,15 @@ main *:last-child {
 main img {
     border-radius: 50%;
     max-width: 100%;
-    transition: linear transform 2s;
-    transform: rotate(0deg);
     -webkit-box-shadow: 0px 0px 12px 6px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 12px 6px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 12px 6px rgba(0,0,0,0.75);
 }
 main img:hover, main img:active {
-    transform: rotate(360deg);
+    animation: 3s linear infinite running rotation-3d;
+}
+
+@keyframes rotation-3d {
+    from { transform: rotate3d(0deg); }
+    to   { transform: rotate3d(1, 1, 0, 360deg); }
 }
