--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
         </div>
     </main>
 
-    <script async src="/scripts/index.js"></script>
+    <script src="/scripts/index.js"></script>
 </body>
 
 </html>
