add project-description class

--- a/views/partials/project.ejs
+++ b/views/partials/project.ejs
@@ -2,7 +2,7 @@
     <h2 class="project-header">
         <%= name %>
     </h2>
-    <div>
+    <div class="project-description">
         <%= description %>
     </div>
     <div class="project-links">
