--- a/src/public/styles/style.css
+++ b/src/public/styles/style.css
@@ -45,11 +45,12 @@ main img:hover, main img:active {
     padding: 12px;
     max-width: 160px;
 }
-/* #projects .project:hover {
-    -webkit-box-shadow: 0px 0px 3px 3px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 3px 3px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 3px 3px rgba(0,0,0,0.75);
-} */
+#projects:hover .project, #projects:active .project {
+    opacity: 0.3;
+}
+#projects .project:hover, #projects .project:active {
+    opacity: 1;
+}
 #projects .project .project-header {
     margin: 0 0 12px 0;
 }
