--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 
 <body>
@@ -30,7 +32,9 @@
         </div>
     </main>
 
-    <script async src="/scripts/index.js"></script>
+    <script async src="https://cdn.jsdelivr.net/npm/social-contact@1.0.9/dist/socialcontact.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/simple-track@1.1.1/dist/index.umd.min.js"></script>
+    <script defer src="/scripts/index.js"></script>
 </body>
 
 </html>
