--- a/styles/style.css
+++ b/styles/style.css
@@ -45,12 +45,12 @@ main img:hover, main img:active {
     padding: 12px;
     max-width: 160px;
 }
-#projects:hover .project, #projects:active .project {
+/* #projects:hover .project, #projects:active .project {
     opacity: 0.3;
-}
-#projects .project:hover, #projects .project:active {
+} */
+/* #projects .project:hover, #projects .project:active {
     opacity: 1;
-}
+} */
 #projects .project .project-header {
     margin: 0 0 12px 0;
 }
