--- a/styles/style.css
+++ b/styles/style.css
@@ -65,7 +65,7 @@ main {
     display: flex;
     flex-wrap: wrap;
     flex-grow: 1;
-    align-items: center;
+    align-content: center;
     justify-content: space-evenly;
 }
 #projects .project {
