--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,7 @@
 
     <!-- <script async src="https://cdn.jsdelivr.net/npm/social-contact@1.0.9/dist/socialcontact.min.js"></script> -->
     <script defer src="https://cdn.jsdelivr.net/npm/simple-track@1.2.0/dist/index.umd.min.js"></script>
+    <!-- <script defer src="/scripts/particle-canvas.js"></script> -->
     <script defer src="/scripts/index.js"></script>
 </body>
 
