--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,13 @@
 
 :root {
     --rotation-matrix: 1, 1, 0;
+
+    --border-color: #FFA384;
+    --background-color: #74BDCB;
+    --content-header-background-color: #EFE7BC;
+    --content-background-color: #E7F2F8;
+
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 html, body {
@@ -15,29 +22,71 @@ body {
     flex-direction: column;
     padding: 0;
     margin: 0;
-    background-color: #EFE7BC;
+    background-color: var(--background-color);
 }
 
-main, header {
+ul#projects {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+ul#projects li {
+    margin-bottom: 6px;
+}
+ul#projects li:last-of-type {
+    margin-bottom: 0;
+}
+
+.app-header {
+    display: flex;
+    flex-shrink: 0;
+    align-items: center;
+    height: 64px;
+    padding: 12px;
+    background-color: var(--content-header-background-color);
+    border-bottom: 4px solid var(--border-color);
+}
+.app-header .app-header-left {
+    display: flex;
+}
+.app-header .app-header-right {
+    margin-left: auto;
+    display: flex;
+}
+.app-header a {
+    display: flex;
+    margin-right: 12px;
+}
+.app-header a:last-of-type {
+    margin-right: 0;
+}
+.app-header a img {
+    height: 48px;
+}
+
+.app-main {
     display: flex;
     flex-direction: column;
-    align-items: center;
-}
-
-header {
-    background-color: #74BDCB;
-}
-
-main {
     flex-grow: 1;
+    align-items: center;
+    overflow-y: auto;
+    padding-bottom: 12px;
+}
+
+.app-main .app-main-plug {
+    text-align: center;
+    margin: 12px 0;
+}
+.app-main #projects {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 720px;
 }
 
 .profile-image {
     border-radius: 50%;
     max-width: 100%;
-    -webkit-box-shadow: 0px 0px 12px 6px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 12px 6px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 12px 6px rgba(0,0,0,0.75);
 }
 .profile-image:hover, .profile-image:active {
     animation: 3s linear infinite running rotation-3d;
@@ -61,43 +110,31 @@ main {
     height: 48px;
 }
 
-#projects {
-    display: flex;
-    flex-wrap: wrap;
-    flex-grow: 1;
-    align-content: center;
-    justify-content: space-evenly;
+.expandable-details {
+    border: 4px solid var(--border-color);
+    border-bottom-width: 0;
+    margin-bottom: 0;
 }
-#projects .project {
-    margin: 12px;
-    border: 3px solid #FFA384;
-    background-color: #E7F2F8;
-    border-radius: 6px;
+.expandable-details:last-of-type {
+    border-bottom-width: 1px;
+}
+.expandable-details .expandable-details-summary {
     padding: 12px;
-    max-width: 160px;
-    transition: transform 0.2s;
+    background-color: var(--content-header-background-color);
 }
-#projects:hover .project, #projects:active .project {
-    transform: scale(0.9);
+.expandable-details .expandable-details-content {
+    padding: 12px;
+    border-top: none;
+    background-color: var(--content-background-color);
 }
-#projects .project:hover, #projects .project:active {
-    transform: scale(1.1);
+.expandable-details[open] .expandable-details-content {
+    border-top: 4px solid var(--border-color);
 }
-#projects .project .project-header {
-    margin: 0 0 12px 0;
-}
-#projects .project .project-description {
-    margin-bottom: 12px;
-}
-#projects .project .project-links {
+
+.project-links {
     display: flex;
     flex-direction: column;
-}
-#projects .project .project-links a {
-    margin-bottom: 6px;
-}
-#projects .project .project-links a:last-of-type {
-    margin-bottom: 0;
+    margin-top: 12px;
 }
 
 @keyframes rotation-3d {
