add padding and background color to plug

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -82,6 +82,8 @@ ul#projects li:last-of-type {
 
 .app-main .app-main-plug {
     text-align: center;
+    background-color: var(--content-background-color);
+    padding: 12px;
     margin: 12px 0;
 }
 .app-main #projects {
