--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -6,6 +6,7 @@
     --rotation-matrix: 1, 1, 0;
 
     --border-color: #FFA384;
+    --border-width: 2px;
     --background-color: #74BDCB;
     --content-header-background-color: #EFE7BC;
     --content-background-color: #E7F2F8;
@@ -44,7 +45,7 @@ ul#projects li:last-of-type {
     height: 64px;
     padding: 12px;
     background-color: var(--content-header-background-color);
-    border-bottom: 4px solid var(--border-color);
+    border-bottom: var(--border-width) solid var(--border-color);
 }
 .app-header .app-header-left {
     display: flex;
@@ -122,7 +123,7 @@ ul#projects li:last-of-type {
 }
 
 .expandable-details {
-    border: 4px solid var(--border-color);
+    border: var(--border-width) solid var(--border-color);
     margin-bottom: 0;
 }
 .expandable-details .expandable-details-summary {
@@ -135,7 +136,7 @@ ul#projects li:last-of-type {
     background-color: var(--content-background-color);
 }
 .expandable-details[open] .expandable-details-content {
-    border-top: 4px solid var(--border-color);
+    border-top: var(--border-width) solid var(--border-color);
 }
 
 .project-links {
