--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@
     --rotation-matrix: 1, 1, 0;
 
     --border-color: #FFA384;
+    --border-width: 2px;
     --background-color: #74BDCB;
     --content-header-background-color: #EFE7BC;
     --content-background-color: #E7F2F8;
@@ -44,7 +45,7 @@ ul#projects li:last-of-type {
     height: 64px;
     padding: 12px;
     background-color: var(--content-header-background-color);
-    border-bottom: 4px solid var(--border-color);
+    border-bottom: var(--border-width) solid var(--border-color);
 }
 .app-header .app-header-left {
     display: flex;
@@ -82,6 +83,8 @@ ul#projects li:last-of-type {
 
 .app-main .app-main-plug {
     text-align: center;
+    background-color: var(--content-background-color);
+    padding: 12px;
     margin: 12px 0;
 }
 .app-main #projects {
@@ -120,12 +123,8 @@ ul#projects li:last-of-type {
 }
 
 .expandable-details {
-    border: 4px solid var(--border-color);
-    border-bottom-width: 0;
+    border: var(--border-width) solid var(--border-color);
     margin-bottom: 0;
-}
-.expandable-details:last-of-type {
-    border-bottom-width: 1px;
 }
 .expandable-details .expandable-details-summary {
     padding: 12px;
@@ -137,7 +136,7 @@ ul#projects li:last-of-type {
     background-color: var(--content-background-color);
 }
 .expandable-details[open] .expandable-details-content {
-    border-top: 4px solid var(--border-color);
+    border-top: var(--border-width) solid var(--border-color);
 }
 
 .project-links {
