--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,7 @@
     <%- appHtml %>
 
     <!-- <script defer src="/scripts/particle-canvas.js"></script> -->
+    <script defer src="https://cdn.jsdelivr.net/npm/simple-track@1.2.0/dist/index.umd.min.js"></script>
     <script defer src="/scripts/index.js"></script>
 </body>
 
