--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="stylesheet" href="/styles/style.css">
+    <% if (process.env.NODE_ENV === 'development') { %>
+        <link rel="stylesheet" href="/styles/index.css">
+    <% } else { %>
+        <link rel="stylesheet" href="/styles/index.min.css">
+    <% } %>
     <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
@@ -20,7 +24,11 @@
 
     <!-- <script defer src="/scripts/particle-canvas.js"></script> -->
     <script defer src="https://cdn.jsdelivr.net/npm/simple-track@1.2.0/dist/index.umd.min.js"></script>
-    <script defer src="/scripts/index.js"></script>
+    <% if (process.env.NODE_ENV === 'development') { %>
+        <script defer src="/scripts/index.js"></script>
+    <% } else { %>
+        <script defer src="/scripts/index.min.js"></script>
+    <% } %>
 </body>
 
 </html>
