--- a/styles/index.css
+++ b/styles/index.css
@@ -1,157 +1,119 @@
-*, *::before, *::after {
-    box-sizing: border-box;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 :root {
-    --rotation-matrix: 1, 1, 0;
+  --rotation-matrix: 1, 1, 0;
 
-    --border-color: #FFA384;
-    --border-width: 2px;
-    --background-color: #74BDCB;
-    --content-header-background-color: #EFE7BC;
-    --content-background-color: #E7F2F8;
+  /* --border-color: #ffa384; */
+  /* --border-width: 2px; */
+  --background-color: #fff0e0;
+  /* --profile-background-color: #a77dcf; */
+  /* --blurb-background-color: #e0e8ff; */
+  --profile-image-box-shadow-color: #e8fff5;
+  --profile-links-background-color: #fdf9f1;
+  --profile-links-border-color: #a3ccc9;
+  --profile-links-focus-visible-border-color: #f4d6d7;
 
-    font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
+  /* font-family: "Courier New", Courier, monospace; */
+  /* font-family: Georgia, "Times New Roman", Times, serif; */
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-html, body {
-    height: 100%;
+html,
+body {
+  height: 100%;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    padding: 0;
-    margin: 0;
-    background-color: var(--background-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+  background-color: var(--background-color);
 }
 
-ul#projects {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-ul#projects li {
-    margin-bottom: 6px;
-}
-ul#projects li:last-of-type {
-    margin-bottom: 0;
+.profile-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* background-color: var(--profile-background-color); */
+  width: 100%;
 }
 
-.app-header {
-    display: flex;
-    flex-shrink: 0;
-    align-items: center;
-    height: 64px;
-    padding: 12px;
-    background-color: var(--content-header-background-color);
-    border-bottom: var(--border-width) solid var(--border-color);
+/* .blurb-container {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--blurb-background-color);
+  padding: 2rem;
+  border: 2px solid var(--border-color);
+} */
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+
+  max-width: 80%;
+  margin: auto;
 }
-.app-header .app-header-left {
-    display: flex;
-    align-items: center;
+main ul {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  list-style-type: none;
+  padding: 1rem;
+  margin: 0;
+  background-color: var(--profile-links-background-color);
+  border: 3px solid var(--profile-links-border-color);
+  width: 100%;
 }
-.app-header .app-header-right {
-    margin-left: auto;
-    display: flex;
+main ul li a {
+  display: block;
+  transition: transform 1s;
+  border-bottom: 3px solid transparent;
 }
-.app-header a {
-    display: flex;
-    margin-right: 12px;
+main ul li a:hover,
+main ul li a:focus-visible {
+  transform: scale(1.1);
+  border-bottom: 3px solid var(--profile-links-focus-visible-border-color);
+  outline: none;
 }
-.app-header a:last-of-type {
-    margin-right: 0;
+main ul li a img {
+  height: 64px;
 }
-.app-header a img {
-    height: 48px;
+main section {
+  text-align: center;
 }
 
-@media (max-width: 480px) {
-    .app-header h1 {
-        visibility: hidden;
-    }
-}  
-
-.app-main {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    align-items: center;
-    overflow-y: auto;
-    padding-bottom: 12px;
-}
-
-.app-main .app-main-plug {
-    text-align: center;
-    background-color: var(--content-background-color);
-    padding: 12px;
-    margin: 12px 0;
-}
-.app-main #projects {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    max-width: 720px;
+.profile-image-container {
+  box-shadow: 0px 0px 64px 48px var(--profile-image-box-shadow-color);
+  border-radius: 50%;
+  margin: 2rem;
 }
 
 .profile-image {
-    border-radius: 50%;
-    max-width: 100%;
-    height: 48px;
-    margin-right: 6px;
+  display: block;
+  border-radius: 50%;
+  max-width: 100%;
+  height: 256px;
+  width: 256px;
 }
-.profile-image:hover, .profile-image:active {
-    animation: 3s linear infinite running rotation-3d;
-}
-
-.social-buttons {
-    display: flex;
-    margin: 24px;
-}
-.social-buttons .social-buttons-button {
-    margin-right: 24px;
-    transition: transform 0.2s;
-}
-.social-buttons .social-buttons-button:last-of-type {
-    margin-right: 0;
-}
-.social-buttons .social-buttons-button:hover, .social-buttons .social-buttons-button:active {
-    transform: scale(1.1);
-}
-.social-buttons .social-buttons-button .social-buttons-button-image {
-    height: 48px;
-}
-
-.expandable-details {
-    border: var(--border-width) solid var(--border-color);
-    margin-bottom: 0;
-}
-.expandable-details .expandable-details-summary {
-    padding: 12px;
-    background-color: var(--content-header-background-color);
-}
-.expandable-details .expandable-details-content {
-    padding: 12px;
-    border-top: none;
-    background-color: var(--content-background-color);
-}
-.expandable-details[open] .expandable-details-content {
-    border-top: var(--border-width) solid var(--border-color);
-}
-
-.project-links {
-    display: flex;
-    flex-direction: column;
-    margin-top: 12px;
-}
-.project-links a {
-    margin-bottom: 6px;
-}
-.project-links a:last-of-type {
-    margin-bottom: 0;
+.profile-image:hover,
+.profile-image:active {
+  animation: 3s linear infinite running rotation-3d;
 }
 
 @keyframes rotation-3d {
-    from { transform: rotate3d(0); }
-    to   { transform: rotate3d(var(--rotation-matrix), 360deg); }
+  from {
+    transform: rotate3d(0);
+  }
+  to {
+    transform: rotate3d(var(--rotation-matrix), 360deg);
+  }
 }
