--- a/styles/index.css
+++ b/styles/index.css
@@ -7,11 +7,7 @@
 :root {
   --rotation-matrix: 1, 1, 0;
 
-  /* --border-color: #ffa384; */
-  /* --border-width: 2px; */
   --background-color: #fff0e0;
-  /* --profile-background-color: #a77dcf; */
-  /* --blurb-background-color: #e0e8ff; */
   --profile-image-box-shadow-color: #e8fff5;
   --profile-links-background-color: #fdf9f1;
   --profile-links-border-color: #a3ccc9;
@@ -41,7 +37,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* background-color: var(--profile-background-color); */
   width: 100%;
 }
 
@@ -58,8 +53,6 @@ main {
   flex-direction: column;
   align-items: center;
   gap: 2rem;
-
-  max-width: 80%;
   margin: auto;
 }
 main ul {
@@ -87,12 +80,9 @@ main ul li a:focus-visible {
 main ul li a img {
   height: 64px;
 }
-main section {
-  text-align: center;
-}
 
 .profile-image-container {
-  box-shadow: 0px 0px 64px 48px var(--profile-image-box-shadow-color);
+  animation: 6s linear infinite running box-shadow-pulse;
   border-radius: 50%;
   margin: 2rem;
 }
@@ -115,5 +105,17 @@ main section {
   }
   to {
     transform: rotate3d(var(--rotation-matrix), 360deg);
+  }
+}
+
+@keyframes box-shadow-pulse {
+  0% {
+    box-shadow: 0px 0px 512px 512px var(--profile-image-box-shadow-color);
+  }
+  50% {
+    box-shadow: none;
+  }
+  100% {
+    box-shadow: 0px 0px 512px 512px var(--profile-image-box-shadow-color);
   }
 }
